# BenSSH

./: .env.example  Cargo.toml  README.md  build.rs  install.ps1
docs/superpowers/plans/: 2026-06-04-ai-ssh-error-analysis.md
docs/superpowers/specs/: 2026-06-04-ai-ssh-error-analysis-design.md
src/: ai.rs  ai_ssh.rs  config.rs  main.rs  manager.rs  sftp.rs  ssh.rs
