[package]
name = "benssh"
version = "0.1.0"
edition = "2021"
description = "Terminal Remote Server Management Tool (Rust Edition)"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
vt100 = "0.15"
portable-pty = "0.8"
unicode-width = "0.1"
dirs = "5.0"
crossterm = "0.27"
ratatui = "0.25"
ssh2 = "0.9"
rfd = "0.14"
dialoguer = "0.11"

[build-dependencies]
winres = "0.1"
